Some more spacing fixes and redundent tapping areas

--- a/src/main.scss
+++ b/src/main.scss
@@ -39,6 +39,8 @@ body {
     font-size: 14px;
     color: #717171;
     min-width: 275px;
+    margin-bottom: 5px;
+    padding-bottom: 5px;
 }
 
 .task-spacing {
@@ -56,6 +58,8 @@ body {
     font-size: 14px;
     color: #717171;
     min-width: 275px;
+    margin-bottom: 5px;
+    padding-bottom: 5px;
 }
 
 .section-row.highlight {
